[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Enemy/Laser_sheet/Laser_sheet-5.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemy/EnergyBall.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes_and_Hurtboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes_and_Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Enemy/Laser_sheet/Laser_sheet-6.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemy/Laser_sheet/Laser_sheet-7.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/energy_ball_shoot.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Enemy/Laser_sheet/Laser_sheet-1.png" type="Texture" id=8]
[ext_resource path="res://assets/Enemy/Laser_sheet/Laser_sheet-2.png" type="Texture" id=9]
[ext_resource path="res://assets/Enemy/Laser_sheet/Laser_sheet-3.png" type="Texture" id=10]
[ext_resource path="res://assets/Enemy/Laser_sheet/Laser_sheet-4.png" type="Texture" id=11]
[ext_resource path="res://Music and Sounds/SFX/Wav Files/golem_special_charge.wav" type="AudioStream" id=12]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "floating",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="EnergyBall" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 78, 17 )
scale = Vector2( 0.804167, 1.045 )
frames = SubResource( 4 )
animation = "floating"
frame = 2
playing = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 12
damage = 4
knockback = 200

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 128
inv_duration = 0.0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 3 )

[node name="ChargeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
bus = "SFX"

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
